...
                    navController.navigate(OnboardingScreen.DateRangePicker.name)
                    entered = true
                },
                colors = ButtonDefaults.buttonColors(backgroundColor = Color.White),
                modifier = modifier
                    .width(175.dp)
                    .semantics { contentDescription = "datepick" },
                shape = RoundedCornerShape(20),
                elevation = ButtonDefaults.elevation(
                    defaultElevation = 0.dp,
                    pressedElevation = 0.dp,
                ),
            ) {
...
