...
            .height(60.dp)
            .background(color = Color.White, shape = RoundedCornerShape(20))
            .border(
                BorderStroke(2.dp, SolidColor(Color.Transparent)),
                shape = RoundedCornerShape(20),
            )
            .semantics { contentDescription = "Pick Days" },
        trailingIcon = {
            if (entered || value != "") {
                Text(
                    text = "days",
                    fontSize = 18.scaledSp(),
                    fontWeight = FontWeight.Bold,
...
