...
                                selectedValue = selectedValue.replace(item, "")
                            } else if (!selectedValue.contains(item)) {
                                selectedValue = selectedValue + "|" + item
                            }
                        })
                        .padding(horizontal = 13.dp)
                        .semantics { contentDescription = "fitness" },
                    verticalArrangement = Arrangement.Center,
                    horizontalAlignment = Alignment.CenterHorizontally,
                ) {
                    Box(
                        modifier = Modifier
                            .height((screenheight * (0.08)).dp)
...
